CVS Code -
- po/pl.po:
	- New Polish, partial translation, by Cezary Sliwa <sliwa@cft.edu.pl>.
- po/it.po:
	- Italian translation update (Marco Colombo).
- po/fr.po:
	- French translation update
- po/ru.po, po/uk.po:
	- Russian and Ukrainian translations updates (Sergey A. Ribalchenko).

nano-1.0.7 - 12/17/2001
- General
	- Backported 1.1's m4/ dirs to nano so nano has its own 
	  self-contained checks for gettext, etc.  This was basically
	  ripped verbatim out of mutt.
- nano.c:
  do_cont()
	- Run signal_init() after doupdate() so ^Y wont suddenly
	  start suspending after returning from ^Z suspend in Hurd.
  do_spell()
	- Dont prompt for replace if we don't change the word in 
	  question (Rocco Corsi, fixes bug #67).
  main()
	- Added better Hurd support for function keys (Alt-V,U,9,@,F).
  signal_init()
	- Unconditionally disable VDSUSP if it exists, stops ^Y 
	  suspending nano on the Hurd.
- po/Makefile.in.in:
	- Change datadir to @datadir@ for Cygwin (Gareth Pearce).
- po/fr.po:
	- French translation update, by Michel Robitaille.
- po/de.po:
	- Updated German translation (Karl Eichwalder).

nano-1.0.6 - 10/29/2001
- General
	- Fixed null_at to ACTUALLY DO SOMETHING with its arg.  Again,
	  this was causing nasty errors if the call to nrealloc moved
	  where the data was located.
	- Changed header comments to say "version 2" instead of "version
	  1" as the COPYING file is actually version 2 of the GPL (bug
	  noticed by Jordi Mallach).
	- Backported do_prev_word() from 1.1.  Command is Meta-Space.
	  Added #ifndef NANO_SMALL around both functions, as they
	  aren't needed for nano-tiny.
- cut.c:
  do_cut_text()
	- Backported 1.1 fixes for just doing edit_refresg when we cut
	  text instead of edit_update.
  do_uncut_text()
	- Backported David Lawrence Ramsey's fixes for doing edit_refresh
	  instead of edit_update when uncutting text.
  cut_marked_segment()
	- Fix off-by one in mem allocation.
- nano.c:
  main()